src/styles/blocks/section.scss
.section {
  padding: 50px 0;

  &.events {
    padding-bottom: 0;
  }

  &.gallery {
    padding-top: 0;
  }

  @include onTablet() {
    padding: 44px 0;
  }

  @include onDesktop() {
    padding: 100px 0;
  }

  &:last-of-type {
    padding-bottom: 0;
  }

  &__title {
    font-size: 36px;
    text-align: center;
    margin-bottom: 40px;

    @include onTablet() {
      margin-bottom: 48px;
    }

    @include onDesktop() {
      margin-bottom: 56px;
    }

    @include onTabletAndDesktop() {
      font-size: 48px;
      text-align: left;
    }

    &--follow {
      color: $text-on-dark;
      margin-bottom: 20px;
    }
  }

  &--reveal {
    position: relative;
    transform: translateY(150px);
    opacity: 0;
    transition: all 0.5s ease-in-out;

    &.active {
      transform: translateY(0);
      opacity: 1;
    }
  }
}

